# AlphaBlock

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  main.py  pyproject.toml
.claude/: launch.json
.streamlit/: config.toml
backtest/: __init__.py  ab_experiment.py  ab_report.py  ab_run.py  ab_walkforward.py  engine.py  harness.py  leverage_book.py  metrics.py  models.py  multi_tf_overlap.py  portfolio.py  report.py  run.py  substep.py  sweep.py  synthetic.py  trade_store.py  walkforward.py  wan103_portfolio_leverage_report.py  wan104_offset_incremental_report.py  wan108_multi_position_reappraisal.py  wan110_multi_position_fill_conservatism.py  wan111_symbol_universe_report.py  wan114_entry_rule_ablation.py  wan115_bollinger_lookahead_recheck.py  wan117_zone_failure_autopsy.py  wan119_intrabar_live_band.py  wan120_strict_causal_band.py  wan123_fill_conservatism.py  wan123_matched_null.py  wan126_multi_tf_overlap.py  wan131_selection_vs_price.py  wan133_geometry_vs_selection.py  wan134_zone_merge_autopsy.py  wan137_phase2_pnl.py  wan137_resistance_distance.py  wan142_zone_width_filter_verdict.py  wan143_zone_height_tp.py  wan145_entry_ablation.py  (+35 more)
cli/: __init__.py  main.py
common/: __init__.py  costs.py  heartbeat.py  telegram.py  timefmt.py
config/: __init__.py  settings.py
dashboard/: __init__.py  app.py  charts.py  data_access.py  health.py  health_data.py  lightweight_chart.py  live_chart.py  pipeline.py  saved_trades.py  trade_table.py
data/: __init__.py  aggregate.py  backfill.py  collector.py  exchange.py  freshness.py  funding.py  gaps.py  history.py  models.py  repair.py  resample.py  sqlite_util.py  storage.py  stream.py  verify.py
docs/: architecture-layers.md
execution/: __init__.py  broker.py  engine.py  models.py  risk.py  sizing.py
live/: __init__.py  executor.py  fill_report.py  health_watch.py  limit_engine.py  limit_orders.py  notifier.py  order_journal.py  paper.py  runner.py  runtime_state.py  telegram.py  zone_limit_runner.py
paper/: __init__.py  digest.py  parity.py  performance.py  report.py  store.py
qc/: __init__.py  algorithm.py  event_engine.py
reports/: wan56_merge_impact.md  wan58_recompute.md  wan65_recompute.md  wan66_recompute.csv  wan66_recompute.md
scripts/: __init__.py  auto-dev.sh  backtest_report.py  install-daemons.sh  install-systemd.sh  merge_impact_report.py  paper_digest.py  paper_report.py  parity_report.py  (+8 more)
(+416 files in other folders)
