[project]
name = "alphablock"
version = "0.1.0"
description = "오더블록 기반 암호화폐 자동매매 (AlphaBlock)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ccxt>=4.0.0",
    "matplotlib>=3.8.0",
    "pandas>=2.0.0",
    "plotly>=6.9.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "streamlit>=1.59.1",
    "websockets>=12.0",
]

[dependency-groups]
dev = [
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
    "pytest>=8.0.0",
]

[project.scripts]
alphablock = "cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["common", "config", "data", "strategy", "execution", "backtest", "dashboard", "live", "cli"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
files = [
    "main.py",
    "common",
    "config",
    "data",
    "strategy",
    "execution",
    "backtest",
    "dashboard",
    "live",
    "cli",
    "tests",
    "scripts",
]

# ccxt/pandas/matplotlib/streamlit은 타입 스텁을 제공하지 않으므로 미싱 임포트를 허용한다.
[[tool.mypy.overrides]]
module = ["ccxt.*", "pandas.*", "matplotlib.*", "streamlit.*", "plotly.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
